--- a/src/styles/left-bar.scss
+++ b/src/styles/left-bar.scss
@@ -3,7 +3,9 @@
 .left-bar {
   padding: 60.4px 38.34px 32.97px 40.54px;
   border-right: 1px solid $borderLeftBarColor;
-  max-width: 251.54px;
+  width: 17%;
+  position: relative;
+  transition: 0.3s;
 
   &__cloud {
     width: 100%;
@@ -44,6 +46,74 @@
     line-height: 13.93px;
     cursor: pointer;
     outline: none;
+  }
+
+  &__open,
+  &__close {
+    position: absolute;
+    top: 42px;
+    right: -50px;
+    width: 50px;
+    height: 40px;
+    padding: 19px 10px;
+    cursor: pointer;
+
+    & > span {
+      display: block;
+      width: 100%;
+      height: 2px;
+      position: relative;
+    }
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 10px;
+      width: 30px;
+      height: 2px;
+      transition: 0.3s;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 10px;
+      width: 30px;
+      height: 2px;
+      transition: 0.3s;
+    }
+
+    & > span,
+    &::before,
+    &::after {
+      background-color: $greyTextColor;
+    }
+
+    .left-bar__close {
+      & > span {
+        display: none;
+      }
+
+      &::before {
+        transform: rotate(45deg);
+      }
+    }
+  }
+
+  &__close {
+    & > span {
+      display: none;
+    }
+
+    &::before {
+      transform: rotate(45deg);
+      top: 19px;
+    }
+
+    &::after {
+      transform: rotate(-45deg);
+      bottom: 19px;
+    }
   }
 }
 
