--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,6 +25,7 @@ $cardProgressBarColor: rgba(25, 123, 189, 1);
 $cardProgressBarBackgroundColor: rgba(241, 241, 241, 1);
 $cardGreyTextColor: rgba(255, 255, 255, 0.39);
 $btnColor: rgba(255, 193, 69, 1);
+$notificationsColor: rgba(227, 227, 227, 1);
 
 * {
   margin: 0;
@@ -45,4 +46,8 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+}
+
+.hide {
+  display: none;
 }
