--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -36,16 +36,20 @@ $notificationsColor: rgba(227, 227, 227, 1);
 body {
   background-color: $bodyBackground;
   font-family: 'Lato', sans-serif;
+  padding: 15px;
 }
 
 .dashboard {
   max-width: 1476.59px;
+  min-height: 904px;
   background-color: $whiteColor;
   border-radius: 59px;
   margin: 0 auto;
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
+  position: relative;
+  overflow: hidden;
 }
 
 .hide {
