--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -35,7 +35,7 @@ $notificationsColor: rgba(227, 227, 227, 1);
 
 body {
   background-color: $bodyBackground;
-  font-family: 'Lato', sans-serif;
+  font-family: suprema;
   padding: 15px;
 }
 
