--- a/src/styles/left-bar.scss
+++ b/src/styles/left-bar.scss
@@ -31,7 +31,6 @@
   }
 
   &__text {
-    font-family: suprema;
     font-size: 8.75px;
     font-weight: 400;
     line-height: 10.78px;
@@ -150,6 +149,7 @@
     padding: 10px 16px;
     list-style: none;
     transition: 0.3s;
+    font-family: 'Lato', sans-serif;
     font-weight: 700;
     font-size: 14px;
 
