--- a/src/styles/cards.scss
+++ b/src/styles/cards.scss
@@ -5,6 +5,7 @@
     0px 0px 1px rgba(0, 0, 0, 0.04);
   border-radius: 28px;
   padding-bottom: 36px;
+  margin-bottom: 31px;
 
   &__title {
     font-weight: 600;
