--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,6 +26,7 @@ $cardProgressBarBackgroundColor: rgba(241, 241, 241, 1);
 $cardGreyTextColor: rgba(255, 255, 255, 0.39);
 $btnColor: rgba(255, 193, 69, 1);
 $notificationsColor: rgba(227, 227, 227, 1);
+$goalsPriceColor: rgba(105, 105, 105, 1);
 
 * {
   margin: 0;
