--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -87,6 +87,12 @@
   }
 }
 
+@media (max-width: 980px) {
+  .header {
+    padding-left: 25px;
+  }
+}
+
 @media (max-width: 690px) {
   .header__right-bar {
     flex-wrap: wrap;
