--- a/src/styles/right-bar.scss
+++ b/src/styles/right-bar.scss
@@ -10,7 +10,7 @@
 
 @media (max-width: 1350px) {
   .dashboard__right-bar {
-    padding: 20px;
+    padding: 20px 25px 20px 20px;
   }
 }
 
@@ -22,6 +22,6 @@
 
 @media (max-width: 550px) {
   .dashboard__right-bar {
-    padding: 10px;
+    padding: 10px 25px 10px 10px;
   }
 }
