--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -37,7 +37,7 @@ $goalsPriceColor: rgba(105, 105, 105, 1);
 body {
   background-color: $bodyBackground;
   font-family: suprema;
-  padding: 10px;
+  padding: 10px 0;
 }
 
 .dashboard {
@@ -50,9 +50,23 @@ body {
   justify-content: flex-end;
   align-items: center;
   position: relative;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .hide {
   display: none;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: -1;
+  opacity: 0;
+  transition: 0.3s;
 }
