--- a/src/styles/goals.scss
+++ b/src/styles/goals.scss
@@ -28,6 +28,7 @@
 
     & > img {
       width: 100%;
+      pointer-events: none;
     }
   }
 
@@ -90,6 +91,96 @@
 
     & > img {
       pointer-events: none;
+    }
+  }
+
+  &__overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    z-index: -1;
+    transition: 0.3s;
+  }
+
+  &__modal {
+    min-width: 300px;
+    min-height: 400px;
+    padding: 25px 15px;
+    border: 5px solid $menuItemsActiveColor;
+    border-radius: 25px;
+    background-color: $whiteColor;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    transform: translateY(200%);
+    transition: 0.3s;
+  }
+
+  &__modal-text {
+    margin-bottom: 10px;
+  }
+
+  &__data-entry-amount,
+  &__data-entry-name {
+    width: 100%;
+    height: 30px;
+    line-height: 24px;
+    border: 1px solid $greyTextColor;
+    border-radius: 7px;
+    padding: 3px 7px;
+    margin-bottom: 40px;
+  }
+
+  &__pictures-container {
+    margin-bottom: 40px;
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+  }
+
+  &__image-link {
+    & > img {
+      pointer-events: none;
+    }
+  }
+
+  &__image-link-active {
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-color: rgba(255, 255, 255, 0.5);
+    }
+  }
+
+  &__add-goal-btn {
+    min-width: 150px;
+    margin-top: auto;
+    text-decoration: none;
+    font-weight: 700;
+    color: $blackTextColor;
+    text-align: center;
+    padding: 10px 0;
+    border-radius: 10px;
+    background-color: $btnColor;
+    transition: 0.3s;
+
+    &:hover {
+      background-color: orange;
     }
   }
 }
